--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using BulkyWeb
 @using BulkyWeb.Models
+@using BulkyWeb.ViewModels
+@using BulkyWeb.ViewModels.Products
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @* @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager *@
