--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-@model BulkyWeb.Models.Product
+@model BulkyWeb.ViewModels.Products.ProductRequest
 
 @{
     ViewData["Title"] = "Create";
@@ -10,11 +10,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId">
+                    <option disabled selected>--Select Category--</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -57,9 +59,10 @@
                 <span asp-validation-for="Price100" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
-                <input asp-for="ImagePath" class="form-control" />
-                <span asp-validation-for="ImagePath" class="text-danger"></span>
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" type="file" class="form-control" id="image-input" onchange="previewImage(event)"
+                    accept="image/*" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -73,5 +76,25 @@
 </div>
 
 @section Scripts {
+
+    <script>
+        $(document).ready(function () {
+            $('#image-input').change(function () {
+                var input = this;
+
+                if (input.files && input.files[0]) {
+                    var reader = new FileReader();
+
+                    reader.onload = function (e) {
+                        $('#preview').attr('src', e.target.result).removeClass('d-none');
+                    }
+
+                    reader.readAsDataURL(input.files[0]);
+                } else {
+                    $('#preview').addClass('d-none');
+                }
+            });
+        });
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
