--- a/Views/Products/Delete.cshtml
+++ b/Views/Products/Delete.cshtml
@@ -1,4 +1,4 @@
-@model BulkyWeb.Models.Product
+@model BulkyWeb.ViewModels.Products.ProductViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
+            @Html.DisplayNameFor(model => model.CategoryName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category!.Id)
+            @Html.DisplayFor(model => model.CategoryName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
@@ -68,8 +68,9 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImagePath)
+        <dd class="col-sm-10">
+            <img src="@Model.ImagePath" alt="Image from @Model.Title"
+                style="max-width: 200px; max-height: 200px; object-fit: cover; border: 1px solid #ddd; border-radius: 5px; padding: 5px;" />
         </dd>
     </dl>
     
