--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-@model BulkyWeb.Models.Product
+@model BulkyWeb.ViewModels.Products.ProductViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -58,10 +58,16 @@
                 <input asp-for="Price100" class="form-control" />
                 <span asp-validation-for="Price100" class="text-danger"></span>
             </div>
+            <input type="hidden" asp-for="ImagePath" />
             <div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
-                <input asp-for="ImagePath" class="form-control" />
-                <span asp-validation-for="ImagePath" class="text-danger"></span>
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" type="file" class="form-control" id="image-input" onchange="previewImage(event)"
+                    accept="image/*" />
+                <span asp-validation-for="Image" class="text-danger"></span>
+            </div>
+            <div class="image-preview my-2">
+                <img id="preview" class="img-fluid border rounded" src="@Model.ImagePath" alt="Preview"
+                    style="max-width: 300px; max-height: 300px; object-fit: contain;" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -75,5 +81,30 @@
 </div>
 
 @section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#image-input').change(function () {
+                var input = this;
+
+                if (input.files && input.files[0]) {
+                    var reader = new FileReader();
+
+                    reader.onload = function (e) {
+                        $('#preview').attr('src', e.target.result).removeClass('d-none');
+                    }
+
+                    reader.readAsDataURL(input.files[0]);
+                } else {
+                    $('#preview').addClass('d-none');
+                }
+            });
+
+            var imagePath = "@Model.ImagePath";
+            if (imagePath == null || imagePath.trim() === "") {
+                $('#preview').addClass('d-none');
+            }
+        });
+    </script>
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
