--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,46 +1,64 @@
-@model IEnumerable<BulkyWeb.Models.Product>
+@model PaginatedList<BulkyWeb.ViewModels.Products.ProductViewModel>
 
-@{
-    ViewData["Title"] = "Index";
-}
-
-<h1>Index</h1>
-
+<div class="=Container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary" ;">
+                Product List
+            </h2>
+        </div>
+    </div>
+</div>
+<form asp-action="Index">
+    <div class="d-flex">
+        <input class="form-control" placeholder="Search..." value="@ViewData["CurrentFilter"]" type="text"
+            autocomplete="off" name="SearchString" />
+    </div>
+</form>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-bordered table-striped">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Category)
+                @Html.DisplayNameFor(model => model[0].CategoryName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["TitleSortParm"]"
+                    asp-route-currentFilter="@ViewData["CurrentFilter"]">
+                    @Html.DisplayNameFor(model => model[0].Title)
+                </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model[0].Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ISBN)
+                @Html.DisplayNameFor(model => model[0].ISBN)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Author)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["TitleSortParm"]"
+                    asp-route-currentFilter="@ViewData["CurrentFilter"]">
+                    @Html.DisplayNameFor(model => model[0].Author)
+                </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ListPrice)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["TitleSortParm"]"
+                    asp-route-currentFilter="@ViewData["CurrentFilter"]">
+                    @Html.DisplayNameFor(model => model[0].ListPrice)
+                </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayNameFor(model => model[0].Price)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price50)
+                @Html.DisplayNameFor(model => model[0].Price50)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price100)
+                @Html.DisplayNameFor(model => model[0].Price100)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImagePath)
+                @Html.DisplayNameFor(model => model[0].ImagePath)
             </th>
             <th></th>
         </tr>
@@ -49,7 +67,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Category!.Id)
+                @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
@@ -75,9 +93,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Price100)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImagePath)
-            </td>
+                <td>
+                    <img src="@item.ImagePath" alt="Image from @item.Title" width="50" height="50"
+                        style="object-fit: cover; border-radius: 5px; display: block; margin: 0 auto;" />
+                </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
@@ -87,3 +106,19 @@
 }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a class="btn btn-primary" asp-action="Index" asp-route-sortOrder="@ViewData["CurrentSort"]"
+    asp-route-pageNumber="@(Model.PageIndex - 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]"
+    class="btn btn-default @prevDisabled">
+    Previous
+</a>
+<a class="btn btn-primary" asp-action="Index" asp-route-sortOrder="@ViewData["CurrentSort"]"
+    asp-route-pageNumber="@(Model.PageIndex + 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]"
+    class="btn btn-default @nextDisabled">
+    Next
+</a>
